# changelog_writer

./: Cargo.toml  babysteps.md  changelog.md  changelog_config.json  readme.md
src/: lib.rs  main.rs
tests/: config-file-tests.rs  config-tests.rs  test_config.json
tests/resources/.git_mock/logs/: HEAD
