[package]
name = "changelog_writer"
version = "0.1.0"
authors = ["akselh <aksel.hjerpbakk@nb.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"